add fork launcher support for appimage
Executing the current processes executable doesn't work for appimage
because the filesystem it is on gets unmounted when the launcher exits.
Instead, reexecute the appimage. This removes the
runelite.launcher.reflect property which was used to signal to force the
reflect launcher, as it is no longer necessary.